@@ -535,6 +535,74 @@ TODO
 -XX:HeapDumpPath=<path> 指定heap转储文件的存储路径，默认当前目录
 -XX:OnOutOfMemoryError=<path> 指定可行性程序或脚本的路径，当发生OOM时执行脚本
 ```
+#### 垃圾收集器相关选项
+##### Serial回收器参数设置
+```shell
+# Serial回收器
+-XX:+UseSerialGC  年轻代使用Serial GC， 老年代使用Serial Old GC
+``` 
+##### ParNew参数设置
+```shell
+# ParNew回收器
+-XX:+UseParNewGC  年轻代使用ParNew GC
+-XX:ParallelGCThreads  设置年轻代并行收集器的线程数。
+	一般地，最好与CPU数量相等，以避免过多的线程数影响垃圾收集性能。
+```
+##### CMS参数设置
+```shell
+# Parallel回收器
+-XX:+UseParallelGC  年轻代使用 Parallel Scavenge GC，互相激活
+-XX:+UseParallelOldGC  老年代使用 Parallel Old GC，互相激活
+-XX:ParallelGCThreads
+-XX:MaxGCPauseMillis  设置垃圾收集器最大停顿时间（即STW的时间），单位是毫秒。
+	为了尽可能地把停顿时间控制在MaxGCPauseMills以内，收集器在工作时会调整Java堆大小或者其他一些参数。
+	对于用户来讲，停顿时间越短体验越好；但是服务器端注重高并发，整体的吞吐量。
+	所以服务器端适合Parallel，进行控制。该参数使用需谨慎。
+-XX:GCTimeRatio  垃圾收集时间占总时间的比例（1 / (N＋1)），用于衡量吞吐量的大小
+	取值范围（0,100），默认值99，也就是垃圾回收时间不超过1％。
+	与前一个-XX：MaxGCPauseMillis参数有一定矛盾性。暂停时间越长，Radio参数就容易超过设定的比例。
+-XX:+UseAdaptiveSizePolicy  设置Parallel Scavenge收集器具有自适应调节策略。
+	在这种模式下，年轻代的大小、Eden和Survivor的比例、晋升老年代的对象年龄等参数会被自动调整，以达到在堆大小、吞吐量和停顿时间之间的平衡点。
+	在手动调优比较困难的场合，可以直接使用这种自适应的方式，仅指定虚拟机的最大堆、目标的吞吐量（GCTimeRatio）和停顿时间（MaxGCPauseMills），让虚拟机自己完成调优工作。
+# CMS回收器
+-XX:+UseConcMarkSweepGC  年轻代使用CMS GC。
+	开启该参数后会自动将-XX：＋UseParNewGC打开。即：ParNew（Young区）+ CMS（Old区）+ Serial Old的组合
+-XX:CMSInitiatingOccupanyFraction  设置堆内存使用率的阈值，一旦达到该阈值，便开始进行回收。JDK5及以前版本的默认值为68，DK6及以上版本默认值为92％。
+	如果内存增长缓慢，则可以设置一个稍大的值，大的阈值可以有效降低CMS的触发频率，减少老年代回收的次数可以较为明显地改善应用程序性能。
+	反之，如果应用程序内存使用率增长很快，则应该降低这个阈值，以避免频繁触发老年代串行收集器。
+	因此通过该选项便可以有效降低Fu1l GC的执行次数。
+-XX:+UseCMSInitiatingOccupancyOnly  是否动态可调，使CMS一直按CMSInitiatingOccupancyFraction设定的值启动
+-XX:+UseCMSCompactAtFullCollection  用于指定在执行完Full GC后对内存空间进行压缩整理
+	以此避免内存碎片的产生。不过由于内存压缩整理过程无法并发执行，所带来的问题就是停顿时间变得更长了。
+-XX:CMSFullGCsBeforeCompaction  设置在执行多少次Full GC后对内存空间进行压缩整理。
+-XX:ParallelCMSThreads  设置CMS的线程数量。
+	CMS 默认启动的线程数是(ParallelGCThreads＋3)/4，ParallelGCThreads 是年轻代并行收集器的线程数。
+	当CPU 资源比较紧张时，受到CMS收集器线程的影响，应用程序的性能在垃圾回收阶段可能会非常糟糕。
+-XX:ConcGCThreads  设置并发垃圾收集的线程数，默认该值是基于ParallelGCThreads计算出来的
+-XX:+CMSScavengeBeforeRemark  强制hotspot在cms remark阶段之前做一次minor gc，用于提高remark阶段的速度
+-XX:+CMSClassUnloadingEnable  如果有的话，启用回收Perm 区（JDK8之前）
+-XX:+CMSParallelInitialEnabled  用于开启CMS initial-mark阶段采用多线程的方式进行标记
+	用于提高标记速度，在Java8开始已经默认开启
+-XX:+CMSParallelRemarkEnabled  用户开启CMS remark阶段采用多线程的方式进行重新标记，默认开启
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+ExplicitGCInvokesConcurrentAndUnloadsClasses
+	这两个参数用户指定hotspot虚拟在执行System.gc()时使用CMS周期
+-XX:+CMSPrecleaningEnabled  指定CMS是否需要进行Pre cleaning阶段
+```
+##### G1参数设置
+```shell
+# G1回收器
+-XX:+UseG1GC 手动指定使用G1收集器执行内存回收任务。
+-XX:G1HeapRegionSize 设置每个Region的大小。
+	值是2的幂，范围是1MB到32MB之间，目标是根据最小的Java堆大小划分出约2048个区域。默认是堆内存的1/2000。
+-XX:MaxGCPauseMillis  设置期望达到的最大GC停顿时间指标（JVM会尽力实现，但不保证达到）。默认值是200ms
+-XX:ParallelGCThread  设置STW时GC线程数的值。最多设置为8
+-XX:ConcGCThreads  设置并发标记的线程数。将n设置为并行垃圾回收线程数（ParallelGCThreads）的1/4左右。
+-XX:InitiatingHeapOccupancyPercent 设置触发并发GC周期的Java堆占用率阈值。超过此值，就触发GC。默认值是45。
+-XX:G1NewSizePercent  新生代占用整个堆内存的最小百分比（默认5％）
+-XX:G1MaxNewSizePercent  新生代占用整个堆内存的最大百分比（默认60％）
+-XX:G1ReservePercent=10  保留内存区域，防止 to space（Survivor中的to区）溢出
+```
 ### G1相关参数
 * -XX:+UseG1GC
 * -XX:G1HeapRegionSize
